<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainString1"
                android:textSize="16sp"
                android:paddingTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/movie_title_id"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainString2"
                android:textSize="16sp"
                android:paddingTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/genres_id"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainString3"
                android:textSize="16sp"
                android:paddingTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/actor1_id"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainString4"
                android:textSize="16sp"
                android:paddingTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/actor2_id"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainString5"
                android:textSize="16sp"
                android:paddingTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/actor3_id"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainString6"
                android:textSize="16sp"
                android:paddingTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/year_id"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainString7"
                android:textSize="16sp"
                android:paddingTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/country_id"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainString8"
                android:textSize="16sp"
                android:paddingTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="20dp"
                android:id="@+id/director_id"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mainstring_submit"
                android:textSize="16sp"
                android:paddingTop="20dp"
                android:id="@+id/button"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>
